[package]
name = "termban"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.1"
crossterm = "0.25"
ratatui = "0.28.1"
palette = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
cpal = "0.15.3" # Add cpal for audio handling
fundsp = "0.16.0" # DSP Middleware solution

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[features]
develop = [] # in developer mode, we don't restrict the player
